# badger

./: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml
badger/: __init__.py  __main__.py  engine.py  llm.py  main.py  models.py
badger/config/: code_review.yaml  code_review_example.md  debate.yaml  requirement_review.yaml
